<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_hotel2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.a2travel.NuevoHotelActivity"
    tools:showIn="@layout/activity_nuevo_hotel">


    <TextView android:id="@+id/txt_hotel_nombre"
        android:text="@string/txt_nombre_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/edit_hotel_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_nombre_hotel"
        android:ems="20"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_below="@+id/txt_hotel_nombre"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/txt_hotel_direccion"
        android:text="@string/txt_dirección_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_hotel_nombre"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/element_margin" />

    <EditText android:id="@+id/edit_hotel_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_direccion_hotel"
        android:ems="20"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_below="@+id/txt_hotel_direccion"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/txt_hotel_fecha_cin"
        android:text="@string/txt_fecha_cin_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_hotel_direccion"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/element_margin" />

    <EditText android:id="@+id/edit_hotel_fecha_cin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/hint_fecha"
        android:layout_below="@+id/txt_hotel_fecha_cin"
        android:layout_alignParentStart="true"
        android:inputType="date"
        android:onClick="showDatePickerHotel"/>

    <TextView android:id="@+id/txt_hotel_hora_cin"
        android:text="@string/txt_hora_cin_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_hotel_fecha_cin"
        android:layout_alignBottom="@+id/txt_hotel_fecha_cin"
        android:layout_alignStart="@+id/txt_hotel_hora_cout" />

    <EditText android:id="@+id/edit_hotel_hora_cin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/hint_hora"
        android:inputType="time"
        android:onClick="showTimePickerHotel"
        android:layout_below="@+id/txt_hotel_hora_cin"
        android:layout_alignStart="@+id/txt_hotel_hora_cin" />

    <TextView android:id="@+id/txt_hotel_fecha_cout"
        android:text="@string/txt_fecha_cout_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_hotel_fecha_cin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/element_margin" />

    <EditText android:id="@+id/edit_hotel_fecha_cout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fecha"
        android:focusable="false"
        android:layout_below="@+id/txt_hotel_fecha_cout"
        android:layout_alignParentStart="true"
        android:inputType="date"
        android:onClick="showDatePickerHotel"/>

    <TextView android:id="@+id/txt_hotel_hora_cout"
        android:text="@string/txt_hora_cout_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_hotel_fecha_cin"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/element_margin" />

    <EditText android:id="@+id/edit_hotel_hora_cout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/hint_hora"
        android:inputType="time"
        android:onClick="showTimePickerHotel"
        android:layout_below="@+id/txt_hotel_hora_cout"
        android:layout_alignStart="@+id/txt_hotel_hora_cout" />

    <Button android:id="@+id/boton_anadir"
        android:text="@string/boton_anadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin"
        android:layout_below="@+id/edit_hotel_fecha_cout"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white_form"
        android:onClick="onAddHotelClick"/>

</RelativeLayout>
